# rs-plugin-common-interfaces

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  rusqlite.rs  video.rs
src/domain/: backup.rs  book.rs  element_type.rs  episode.rs  external_images.rs  media.rs  mod.rs  movie.rs  other_ids.rs  person.rs  rs_ids.rs  rusqlite.rs  serie.rs  tag.rs  tools.rs
src/lookup/: mod.rs
src/provider/: mod.rs
src/request/: error.rs  mod.rs
src/url/: mod.rs  rusqlite.rs
src/video/: mod.rs  rusqlite.rs
