[package]
name = "rs-plugin-common-interfaces"
version = "0.18.4"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["arnaud jezequel"]
description = "Common description for plugin creation"
homepage = "https://github.com/neckaros/rs-plugin-common-interfaces" 
readme = "README.md"
repository = "https://github.com/neckaros/rs-plugin-common-interfaces/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26.2"
strum_macros = "0.26.2"
rusqlite = { version = "0.31", optional = true }
regex = "1.10.4"
urlencoding = "2.1.3"
